Update HelloWorld flashing docs and scripts offsets

--- a/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
+++ b/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
@@ -118,12 +118,12 @@ Processing build images...
 Creating meta header...
 Generating flash header...
 Signing certificate...
-[OK] Meta Image created: sbl_meta.bin
-Size: 135,168 bytes
+[OK] Meta Image created: sbl.release.appimage
+Size: ~135 KB
 ```
 
 **生成文件**：
-- `sbl_meta.bin` ⭐ **重要：这就是要烧录的文件**
+- `sbl.release.appimage` ⭐ **重要：这就是要烧录的文件**
 
 ---
 
@@ -170,22 +170,12 @@ Processing build images...
   [2/2] hello_world_dsp_img.release.rig
 Creating meta header...
 Signing certificate...
-[OK] Meta Image created: hello_world_meta.bin
-Size: 218,624 bytes
+[OK] Meta Image created: hello_world_system.release.appimage
+Size: ~200 KB
 ```
 
 **生成文件**：
-- `hello_world_meta.bin` ⭐ **重要：这就是要烧录的文件**
-
----
-
-### 2.3 移动生成文件
-
-```powershell
-# 将生成的Meta Images移动到4-Generated目录
-Move-Item "1-SBL_Bootloader\sbl_meta.bin" -Destination "4-Generated\" -Force
-Move-Item "2-HelloWorld_App\hello_world_meta.bin" -Destination "4-Generated\" -Force
-```
+- `hello_world_system.release.appimage` ⭐ **重要：这就是要烧录的文件**
 
 ---
 
@@ -193,16 +183,12 @@ Move-Item "2-HelloWorld_App\hello_world_meta.bin" -Destination "4-Generated\" -F
 
 ### 3.1 硬件设置
 
-**配置SOP4模式（UART烧录模式）**：
+**配置SOP_MODE1（Flashing，OFF/OFF）**：
 
 开发板跳线位置：
 ```
-SOP[2:0] = [1,0,0]  → SOP4模式
-
-跳线设置：
-  SOP0: OFF (断开)
-  SOP1: OFF (断开)
-  SOP2: ON  (闭合) ← 重要
+SOP0: OFF (断开)
+SOP1: OFF (断开)
 ```
 
 **连接硬件**：
@@ -232,13 +218,13 @@ Get-WmiObject Win32_SerialPort | Select-Object Name,DeviceID
 cd 3-Tools
 
 # 替换COMx为你的串口号
-.\arprog_cmdline_6844.exe -p COM3 -f ..\4-Generated\sbl_meta.bin -o 0x100
+.\arprog_cmdline_6844.exe -p COM3 -f ..\1-SBL_Bootloader\sbl.release.appimage -o 0x2000
 ```
 
 **参数说明**：
 - `-p COM3`: 串口号
-- `-f sbl_meta.bin`: 要烧录的文件
-- `-o 0x100`: Flash起始地址（256字节偏移）
+- `-f sbl.release.appimage`: 要烧录的SBL meta image
+- `-o 0x2000`: Flash起始地址（M_META_SBL_OFFSET）
 
 ---
 
@@ -258,13 +244,13 @@ Connecting...
 Device ID: 0x68440001
 
 Erasing sectors...
-  Address: 0x00000000 - 0x00040000
+  Address: 0x00002000 - 0x00041FFF
   [████████████████████] 100%
 [OK] Erase complete
 
 Programming...
-  File: sbl_meta.bin (135,168 bytes)
-  Address: 0x00000100
+  File: sbl.release.appimage (约135KB)
+  Address: 0x00002000
   [████████████████████] 100%
 [OK] Program complete
 
@@ -285,7 +271,7 @@ Status: SUCCESS ✅
 
 ```bash
 # 读取Flash内容验证（可选）
-.\arprog_cmdline_6844.exe -p COM3 -r 0x100 -s 256 -o verify_sbl.bin
+.\arprog_cmdline_6844.exe -p COM3 -r 0x2000 -s 512 -o verify_sbl.bin
 ```
 
 ---
@@ -299,11 +285,11 @@ Status: SUCCESS ✅
 ```bash
 cd 3-Tools
 
-.\arprog_cmdline_6844.exe -p COM3 -f ..\4-Generated\hello_world_meta.bin -o 0x40000
+.\arprog_cmdline_6844.exe -p COM3 -f ..\2-HelloWorld_App\hello_world_system.release.appimage -o 0x42000
 ```
 
 **参数说明**：
-- `-o 0x40000`: 应用起始地址（256KB偏移）
+- `-o 0x42000`: 应用起始地址（M_META_IMAGE_OFFSET）
 
 ---
 
@@ -318,13 +304,13 @@ Port: COM3
 Target: AWRL6844
 
 Erasing sectors...
-  Address: 0x00040000 - 0x000C0000
+  Address: 0x00042000 - 0x001FFFFF (按SBL最大擦除范围)
   [████████████████████] 100%
 [OK] Erase complete
 
 Programming...
-  File: hello_world_meta.bin (218,624 bytes)
-  Address: 0x00040000
+  File: hello_world_system.release.appimage (约200KB)
+  Address: 0x00042000
   [████████████████████] 100%
 [OK] Program complete
 
@@ -345,15 +331,11 @@ Status: SUCCESS ✅
 
 ### 5.1 切换到运行模式
 
-**配置SOP0模式（QSPI Flash启动）**：
+**配置SOP_MODE2模式（应用启动）**：
 
 ```
-SOP[2:0] = [0,0,0]  → SOP0模式
-
-跳线设置：
-  SOP0: OFF (断开)
-  SOP1: OFF (断开)
-  SOP2: OFF (断开) ← 重要改变
+SOP0: OFF (断开)
+SOP1: ON  (闭合)
 ```
 
 ### 5.2 打开串口终端
@@ -484,7 +466,7 @@ Error: Device not detected
 
 **症状**：
 ```
-Error: Programming failed at 0x00000100
+Error: Programming failed at 0x00002000
 ```
 
 **解决方案**：
@@ -518,7 +500,7 @@ Error: Programming failed at 0x00000100
 ```
 
 **解决方案**：
-1. 确认应用烧录地址正确（0x40000）
+1. 确认应用烧录地址正确（0x42000）
 2. 重新生成hello_world_meta.bin
 3. 重新烧录应用
 
@@ -542,10 +524,10 @@ Error: Programming failed at 0x00000100
 
 ```bash
 # 读取SBL区域
-arprog_cmdline_6844.exe -p COM3 -r 0x100 -s 262144 -o sbl_readback.bin
+arprog_cmdline_6844.exe -p COM3 -r 0x2000 -s 0x3E000 -o sbl_readback.bin
 
-# 读取App区域
-arprog_cmdline_6844.exe -p COM3 -r 0x40000 -s 524288 -o app_readback.bin
+# 读取App区域（按SBL_MAX_METAIMAGE_SIZE）
+arprog_cmdline_6844.exe -p COM3 -r 0x42000 -s 0x1BE000 -o app_readback.bin
 ```
 
 ### 全片擦除
@@ -559,7 +541,7 @@ arprog_cmdline_6844.exe -p COM3 -e
 
 ```bash
 # 烧录后自动验证
-arprog_cmdline_6844.exe -p COM3 -f sbl_meta.bin -o 0x100 -v
+arprog_cmdline_6844.exe -p COM3 -f sbl.release.appimage -o 0x2000 -v
 ```
 
 ---
