Fix flashing guide: remove circular logic, use precompiled appimage directly

--- a/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
+++ b/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
@@ -1,17 +1,16 @@
 # 📖 AWRL6844 HelloWorld 完整烧录操作指南
 
-> **从空白板子到HelloWorld运行的完整步骤**
+> **从空白板子到HelloWorld运行的完整步骤 - 使用预编译固件**
 
 ---
 
 ## 目录
 
 - [前置准备](#前置准备)
-- [Phase 1: 文件准备](#phase-1-文件准备)
-- [Phase 2: 生成Meta Images](#phase-2-生成meta-images)
-- [Phase 3: 烧录SBL](#phase-3-烧录sbl)
-- [Phase 4: 烧录应用](#phase-4-烧录应用)
-- [Phase 5: 验证运行](#phase-5-验证运行)
+- [Phase 1: 硬件连接与检查](#phase-1-硬件连接与检查)
+- [Phase 2: 烧录SBL Bootloader](#phase-2-烧录sbl-bootloader)
+- [Phase 3: 烧录HelloWorld应用](#phase-3-烧录helloworld应用)
+- [Phase 4: 验证运行](#phase-4-验证运行)
 - [故障排查](#故障排查)
 
 ---
@@ -40,63 +39,36 @@
 
 ---
 
-## Phase 1: 文件准备
+## Phase 1: 硬件连接与检查
 
-### 1.1 检查文件完整性
+### 1.1 检查预编译固件
 
-确认以下文件存在：
+确认以下**预编译固件**存在（无需重新生成）：
 
 ```
 01-AWRL6844_HelloWorld_完整烧录/
 ├── 1-SBL_Bootloader/
-│   ├── sbl.release.appimage               ✅ 必须
-│   └── metaimage_cfg.release.json         ✅ 必须
+│   └── sbl.release.appimage               ✅ 预编译SBL (~130KB)
 │
 ├── 2-HelloWorld_App/
-│   ├── hello_world_system.release.appimage ✅ 必须
-│   └── metaimage_cfg.release.json          ✅ 必须
+│   └── hello_world_system.release.appimage ✅ 预编译App (~220KB)
 │
 └── 3-Tools/
-    ├── arprog_cmdline_6844.exe            ✅ 必须
-    ├── buildImage_creator.exe             ✅ 必须
-    └── metaImage_creator.exe              ✅ 必须
+    └── arprog_cmdline_6844.exe            ✅ 烧录工具
 ```
 
-### 1.2 查看文件信息
+> **说明**：`.appimage` 是TI SDK预编译的可烧录固件，包含完整的meta header和代码，**可直接烧录**，无需再生成。
+
+### 1.2 查看固件信息
 
 ```powershell
-# 检查SBL文件大小
+# 检查SBL固件大小
 Get-ChildItem "1-SBL_Bootloader\sbl.release.appimage"
 # 预期: ~130KB
 
-# 检查HelloWorld文件大小
+# 检查HelloWorld固件大小
 Get-ChildItem "2-HelloWorld_App\hello_world_system.release.appimage"
-# 预期: ~200KB
-```
-
----
-
-## Phase 2: 生成Meta Images
-
-### 2.1 生成SBL Meta Image
-
-**进入SBL目录**：
-```powershell
-cd 1-SBL_Bootloader
-```
-
-**Step 1: 提取Build Images**
-```bash
-..\3-Tools\buildImage_creator.exe -i sbl.release.appimage
-```
-
-**预期输出**：
-```
-Build Image Creator v1.0
-Processing: sbl.release.appimage
-Found image: sbl_r5_img.release.rig
-Extracting...
-[OK] sbl_r5_img.release.rig extracted
+# 预期: ~220KB
 ```
 
 **生成文件**：
@@ -127,108 +99,72 @@ Size: ~135 KB
 
 ---
 
-### 2.2 生成HelloWorld Meta Image
+### 1.3 硬件连接
 
-**进入HelloWorld目录**：
-```powershell
-cd ..\2-HelloWorld_App
-```
-
-**Step 1: 提取Build Images**
-```bash
-..\3-Tools\buildImage_creator.exe -i hello_world_system.release.appimage
-```
-
-**预期输出**：
-```
-Build Image Creator v1.0
-Processing: hello_world_system.release.appimage
-Found images:
-  1. hello_world_r5_img.release.rig
-  2. hello_world_dsp_img.release.rig
-Extracting...
-[OK] All images extracted
-```
-
-**生成文件**：
-- `temp/hello_world_r5_img.release.rig`
-- `temp/hello_world_dsp_img.release.rig`
-
----
-
-**Step 2: 创建Meta Image**
-```bash
-..\3-Tools\metaImage_creator.exe -config metaimage_cfg.release.json
-```
-
-**预期输出**：
-```
-Meta Image Creator v2.0
-Reading config: metaimage_cfg.release.json
-Processing build images...
-  [1/2] hello_world_r5_img.release.rig
-  [2/2] hello_world_dsp_img.release.rig
-Creating meta header...
-Signing certificate...
-[OK] Meta Image created: hello_world_system.release.appimage
-Size: ~200 KB
-```
-
-**生成文件**：
-- `hello_world_system.release.appimage` ⭐ **重要：这就是要烧录的文件**
-
----
-
-## Phase 3: 烧录SBL
-
-### 3.1 硬件设置
-
-**配置SOP_MODE1（Flashing，OFF/OFF）**：
-
-开发板跳线位置：
-```
-SOP0: OFF (断开)
-SOP1: OFF (断开)
-```
-
-**连接硬件**：
-1. USB数据线连接开发板和PC
+**USB连接**：
+1. 使用USB数据线连接开发板和PC
 2. 确保电源指示灯亮起
+3. Windows会自动识别XDS110设备
 
----
+**识别串口号**：
 
-### 3.2 识别串口
-
-**Windows设备管理器**：
+Windows设备管理器：
 1. 右键"此电脑" → 管理 → 设备管理器
 2. 展开"端口(COM和LPT)"
-3. 查找"XDS110 Class Application/User UART (COMx)"
-4. 记住COM端口号，如：`COM3`
+3. 查找 `XDS110 Class Application/User UART (COMx)`
+4. 记住COM端口号（烧录用），如：`COM3`
+5. 另有 `XDS110 Class Auxiliary Data Port (COMy)` (日志用)，如：`COM4`
 
-**PowerShell命令**：
+PowerShell命令：
 ```powershell
-Get-WmiObject Win32_SerialPort | Select-Object Name,DeviceID
+Get-WmiObject Win32_SerialPort | Select-Object DeviceID, Description
+```
+
+预期输出：
+```
+DeviceID Description
+-------- -----------
+COM3     XDS110 Class Application/User UART    ← 用这个烧录
+COM4     XDS110 Class Auxiliary Data Port      ← 用这个看日志
 ```
 
 ---
 
-### 3.3 执行烧录
+## Phase 2: 烧录SBL Bootloader
 
-```bash
-cd 3-Tools
+### 2.1 配置SOP开关为烧录模式
 
-# 替换COMx为你的串口号
-.\arprog_cmdline_6844.exe -p COM3 -f ..\1-SBL_Bootloader\sbl.release.appimage -o 0x2000
+**SOP_MODE1（Flashing模式）**：
+
+开发板跳线设置：
+```
+S8 (SOP0): OFF (断开)
+S7 (SOP1): OFF (断开)
+```
+
+> **重要**：必须设置为此模式才能烧录Flash！
+
+---
+
+### 2.2 执行SBL烧录
+
+进入工具目录并执行烧录命令：
+
+```powershell
+cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\3-Tools"
+
+# 替换COM3为你的实际串口号
+.\arprog_cmdline_6844.exe -p COM3 -f "..\1-SBL_Bootloader\sbl.release.appimage" -o 0x2000
 ```
 
 **参数说明**：
-- `-p COM3`: 串口号
-- `-f sbl.release.appimage`: 要烧录的SBL meta image
-- `-o 0x2000`: Flash起始地址（M_META_SBL_OFFSET）
+- `-p COM3`: 串口号（烧录通道）
+- `-f sbl.release.appimage`: 预编译的SBL固件
+- `-o 0x2000`: Flash起始地址（与SDK宏`M_META_SBL_OFFSET`一致）
 
 ---
 
-### 3.4 烧录过程监控
+### 2.3 烧录过程监控
 
 **预期输出**：
 ```
@@ -249,7 +185,7 @@ Erasing sectors...
 [OK] Erase complete
 
 Programming...
-  File: sbl.release.appimage (约135KB)
+  File: sbl.release.appimage (~130KB)
   Address: 0x00002000
   [████████████████████] 100%
 [OK] Program complete
@@ -267,16 +203,97 @@ Status: SUCCESS ✅
 
 ---
 
-### 3.5 验证SBL烧录
+### 2.4 验证SBL烧录（可选）
 
-```bash
-# 读取Flash内容验证（可选）
-.\arprog_cmdline_6844.exe -p COM3 -r 0x2000 -s 512 -o verify_sbl.bin
+读回Flash内容对比：
+
+```powershell
+# 读取Flash前512字节
+.\arprog_cmdline_6844.exe -p COM3 -r 0x2000 -s 512 -o sbl_readback.bin
+
+# 对比文件（应该一致）
+fc /b "..\1-SBL_Bootloader\sbl.release.appimage" sbl_readback.bin
 ```
 
 ---
 
-## Phase 4: 烧录应用
+## Phase 3: 烧录HelloWorld应用
+
+### 3.1 确认SOP模式
+
+**保持SOP_MODE1**（无需改变跳线）：
+```
+S8 (SOP0): OFF
+S7 (SOP1): OFF
+```
+
+---
+
+### 3.2 执行App烧录
+
+```powershell
+# 确保在3-Tools目录
+.\arprog_cmdline_6844.exe -p COM3 -f "..\2-HelloWorld_App\hello_world_system.release.appimage" -o 0x42000
+```
+
+**参数说明**：
+- `-p COM3`: 串口号
+- `-f hello_world_system.release.appimage`: 预编译的HelloWorld应用
+- `-o 0x42000`: Flash起始地址（与SDK宏`M_META_IMAGE_OFFSET`一致，SBL会从这里加载）
+
+---
+
+### 3.3 烧录过程监控
+
+**预期输出**：
+```
+======================================
+TI Flash Programmer v3.5
+======================================
+Port: COM3
+Baudrate: 115200
+Target: AWRL6844
+
+Connecting...
+[OK] Device detected
+
+Erasing sectors...
+  Address: 0x00042000 - 0x001FFFFF
+  [████████████████████] 100%
+[OK] Erase complete
+
+Programming...
+  File: hello_world_system.release.appimage (~220KB)
+  Address: 0x00042000
+  [████████████████████] 100%
+[OK] Program complete
+
+Verifying...
+  [████████████████████] 100%
+[OK] Verify complete
+
+Time: 60 seconds
+Status: SUCCESS ✅
+======================================
+```
+
+**烧录时间**：约 60-75 秒
+
+---
+
+### 3.4 验证App烧录（可选）
+
+```powershell
+# 读取Flash前1KB
+.\arprog_cmdline_6844.exe -p COM3 -r 0x42000 -s 1024 -o app_readback.bin
+
+# 对比
+fc /b "..\2-HelloWorld_App\hello_world_system.release.appimage" app_readback.bin
+```
+
+---
+
+## Phase 4: 验证运行
 
 ### 4.1 烧录HelloWorld
 
