fix: 修正固件烧录流程文档错误
- 删除错误的Meta生成流程（AI误创建）
- 修正为官方SDK标准流程：.appimage  arprog -cf
- 删除5个错误文件（metaimage_cfg.json、生成脚本等）
- 重写8个README文档，对齐官方SDK说明
- 修复3个烧录脚本，使用正确的arprog参数
- 添加官方SDK完整流程定义文档（基于BUILD_GUIDE.html等）
- 添加修复执行计划和错误对比分析

官方依据：
- BUILD_GUIDE.html: .appimage可直接烧录
- EVM_SETUP_AND_FLASHING.html: arprog -cf自动创建Header
- sbl.h: 定义Flash地址0x2000和0x42000

--- a/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
+++ b/项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/操作指南.md
@@ -1,16 +1,15 @@
 # 📖 AWRL6844 HelloWorld 完整烧录操作指南
 
-> **从空白板子到HelloWorld运行的完整步骤 - 使用预编译固件**
+> **基于TI官方SDK标准流程 - 简化版**
 
 ---
 
-## 目录
+## 📋 目录
 
 - [前置准备](#前置准备)
-- [Phase 1: 硬件连接与检查](#phase-1-硬件连接与检查)
-- [Phase 2: 烧录SBL Bootloader](#phase-2-烧录sbl-bootloader)
-- [Phase 3: 烧录HelloWorld应用](#phase-3-烧录helloworld应用)
-- [Phase 4: 验证运行](#phase-4-验证运行)
+- [Phase 1: 检查文件与硬件](#phase-1-检查文件与硬件)
+- [Phase 2: 烧录固件](#phase-2-烧录固件)
+- [Phase 3: 验证运行](#phase-3-验证运行)
 - [故障排查](#故障排查)
 
 ---
@@ -21,409 +20,364 @@
 
 - [x] **AWRL6844EVM开发板** × 1
 - [x] **USB数据线** (Type-C或Micro-USB) × 1
-- [x] **跳线帽** (用于SOP模式设置) × 3
 
 ### 软件准备
 
 - [x] **串口调试工具** (TeraTerm / PuTTY / 串口助手)
 - [x] **XDS110驱动** (TI官方USB驱动)
-- [x] **本项目文件** (所有工具和固件已准备好)
+- [x] **本项目固件文件** (已包含可烧录的.appimage)
 
 ### 驱动安装
 
 如果串口无法识别，需要安装XDS110驱动：
 
-1. 下载驱动：`C:\ti\ccs1280\ccs\install_scripts\`
+1. 驱动位置：`C:\ti\ccs1280\ccs\install_scripts\`
 2. 运行：`install_drivers.bat`
 3. 重启电脑
 
 ---
 
-## Phase 1: 硬件连接与检查
+## Phase 1: 检查文件与硬件
 
-### 1.1 检查预编译固件
+### 1.1 检查固件文件
 
-确认以下**预编译固件**存在（无需重新生成）：
+确认以下**预编译固件**存在：
 
 ```
 01-AWRL6844_HelloWorld_完整烧录/
 ├── 1-SBL_Bootloader/
-│   └── sbl.release.appimage               ✅ 预编译SBL (~130KB)
+│   └── sbl.release.appimage               ✅ SBL固件 (~130KB)
 │
 ├── 2-HelloWorld_App/
-│   └── hello_world_system.release.appimage ✅ 预编译App (~220KB)
+│   └── hello_world_system.release.appimage ✅ App固件 (~200KB)
 │
 └── 3-Tools/
     └── arprog_cmdline_6844.exe            ✅ 烧录工具
 ```
 
-> **说明**：`.appimage` 是TI SDK预编译的可烧录固件，包含完整的meta header和代码，**可直接烧录**，无需再生成。
+> **重要说明**：`.appimage` 文件由TI SDK编译生成，包含完整的Meta Header和多核代码，**可直接烧录到Flash**，无需任何中间处理步骤。
 
-### 1.2 查看固件信息
+### 1.2 查看固件信息（可选）
 
 ```powershell
-# 检查SBL固件大小
-Get-ChildItem "1-SBL_Bootloader\sbl.release.appimage"
-# 预期: ~130KB
+# 检查SBL固件
+Get-ChildItem "1-SBL_Bootloader\sbl.release.appimage" | Format-Table Name, Length
 
-# 检查HelloWorld固件大小
-Get-ChildItem "2-HelloWorld_App\hello_world_system.release.appimage"
-# 预期: ~220KB
-```
-
-**生成文件**：
-- `temp/sbl_r5_img.release.rig`
-
----
-
-**Step 2: 创建Meta Image**
-```bash
-..\3-Tools\metaImage_creator.exe -config metaimage_cfg.release.json
+# 检查App固件
+Get-ChildItem "2-HelloWorld_App\hello_world_system.release.appimage" | Format-Table Name, Length
 ```
 
 **预期输出**：
-```
-Meta Image Creator v2.0
-Reading config: metaimage_cfg.release.json
-Processing build images...
-  [1/1] sbl_r5_img.release.rig
-Creating meta header...
-Generating flash header...
-Signing certificate...
-[OK] Meta Image created: sbl.release.appimage
-Size: ~135 KB
-```
-
-**生成文件**：
-- `sbl.release.appimage` ⭐ **重要：这就是要烧录的文件**
+- SBL: ~130KB (133000字节左右)
+- App: ~200KB (204800字节左右)
 
 ---
 
-### 1.3 硬件连接
+### 1.3 硬件连接与识别
 
 **USB连接**：
-1. 使用USB数据线连接开发板和PC
+1. 使用USB数据线连接开发板到PC
 2. 确保电源指示灯亮起
-3. Windows会自动识别XDS110设备
+3. Windows自动识别XDS110设备
 
-**识别串口号**：
+**识别COM端口**：
 
-Windows设备管理器：
-1. 右键"此电脑" → 管理 → 设备管理器
+方法1 - 设备管理器：
+1. Win+X → 设备管理器
 2. 展开"端口(COM和LPT)"
-3. 查找 `XDS110 Class Application/User UART (COMx)`
-4. 记住COM端口号（烧录用），如：`COM3`
-5. 另有 `XDS110 Class Auxiliary Data Port (COMy)` (日志用)，如：`COM4`
+3. 查找 `XDS110 Class Application/User UART (COM3)` ← **烧录用这个**
+4. 另有 `XDS110 Class Auxiliary Data Port (COM4)` ← 调试日志用
 
-PowerShell命令：
+方法2 - PowerShell命令：
 ```powershell
 Get-WmiObject Win32_SerialPort | Select-Object DeviceID, Description
 ```
 
 预期输出：
 ```
-DeviceID Description
--------- -----------
-COM3     XDS110 Class Application/User UART    ← 用这个烧录
-COM4     XDS110 Class Auxiliary Data Port      ← 用这个看日志
+DeviceID  Description
+--------  -----------
+COM3      XDS110 Class Application/User UART    ← 烧录用
+COM4      XDS110 Class Auxiliary Data Port      ← 日志用
 ```
 
 ---
 
-## Phase 2: 烧录SBL Bootloader
+## Phase 2: 烧录固件
 
-### 2.1 配置SOP开关为烧录模式
+### 2.1 设置烧录模式
 
-**SOP_MODE1（Flashing模式）**：
+**配置SOP开关为 SOP_MODE1 (烧录模式)**：
 
-开发板跳线设置：
 ```
-S8 (SOP0): OFF (断开)
-S7 (SOP1): OFF (断开)
+SOP0: OFF  (断开)
+SOP1: OFF  (断开)
 ```
 
 > **重要**：必须设置为此模式才能烧录Flash！
 
 ---
 
-### 2.2 执行SBL烧录
+### 2.2 执行烧录
 
-进入工具目录并执行烧录命令：
+**方法1：一键完整烧录（推荐）**
+
+```powershell
+# 进入脚本目录
+cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts"
+
+# 执行烧录（替换COM3为实际端口）
+.\full_flash.bat COM3
+```
+
+此脚本会自动完成：
+- ✅ 检查固件文件
+- ✅ 烧录SBL到0x2000
+- ✅ 烧录App到0x42000
+- ✅ 验证烧录结果
+
+**烧录时间**: 约2-3分钟
+
+---
+
+**方法2：分步手动烧录**
+
+```powershell
+cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts"
+
+# 步骤1: 烧录SBL
+.\3_flash_sbl.bat COM3
+
+# 步骤2: 烧录Application
+.\4_flash_app.bat COM3
+```
+
+---
+
+**方法3：直接使用arprog工具（高级）**
 
 ```powershell
 cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\3-Tools"
 
-# 替换COM3为你的实际串口号
-.\arprog_cmdline_6844.exe -p COM3 -f "..\1-SBL_Bootloader\sbl.release.appimage" -o 0x2000
+# 一次性烧录SBL和App（推荐）
+.\arprog_cmdline_6844.exe -p COM3 ^
+  -f1 "..\1-SBL_Bootloader\sbl.release.appimage" ^
+  -f2 "..\2-HelloWorld_App\hello_world_system.release.appimage" ^
+  -s SFLASH -c -cf
 ```
 
 **参数说明**：
-- `-p COM3`: 串口号（烧录通道）
-- `-f sbl.release.appimage`: 预编译的SBL固件
-- `-o 0x2000`: Flash起始地址（与SDK宏`M_META_SBL_OFFSET`一致）
+- `-p COM3` - 指定串口
+- `-f1` / `-f2` - 指定烧录文件（支持最多8个文件）
+- `-s SFLASH` - 目标存储器（QSPI Flash）
+- `-c` - 发送break信号初始化
+- `-cf` - **自动创建Flash头**（工具自动计算地址）
 
 ---
 
-### 2.3 烧录过程监控
+### 2.3 烧录过程输出
 
-**预期输出**：
+**预期输出示例**：
+
 ```
-======================================
-TI Flash Programmer v3.5
-======================================
-Port: COM3
-Baudrate: 115200
-Target: AWRL6844
+SW version: 0.8
+Connecting Com Port....
+connect to device
+INFO : Port Opened
+set break signal
+--- please restart the device ---
+connection succeeded
 
-Connecting...
-[OK] Device detected
-Device ID: 0x68440001
+downloading [0] size [80]
+INFO : Port Opened
+INFO: Send start download command
+[========================================>] 100%
 
-Erasing sectors...
-  Address: 0x00002000 - 0x00041FFF
-  [████████████████████] 100%
-[OK] Erase complete
+downloading [8192] size [133120]
+INFO : Port Opened
+INFO: Send start download command
+[========================================>] 100%
+↑ SBL烧录完成
 
-Programming...
-  File: sbl.release.appimage (~130KB)
-  Address: 0x00002000
-  [████████████████████] 100%
-[OK] Program complete
+downloading [270336] size [204800]
+INFO : Port Opened
+INFO: Send start download command
+[========================================>] 100%
+↑ Application烧录完成
 
-Verifying...
-  [████████████████████] 100%
-[OK] Verify complete
-
-Time: 45 seconds
-Status: SUCCESS ✅
-======================================
-```
-
-**烧录时间**：约 45-60 秒
-
----
-
-### 2.4 验证SBL烧录（可选）
-
-读回Flash内容对比：
-
-```powershell
-# 读取Flash前512字节
-.\arprog_cmdline_6844.exe -p COM3 -r 0x2000 -s 512 -o sbl_readback.bin
-
-# 对比文件（应该一致）
-fc /b "..\1-SBL_Bootloader\sbl.release.appimage" sbl_readback.bin
+Flash complete!
 ```
 
 ---
 
-## Phase 3: 烧录HelloWorld应用
+## Phase 3: 验证运行
 
-### 3.1 确认SOP模式
+### 3.1 切换到运行模式
 
-**保持SOP_MODE1**（无需改变跳线）：
+**配置SOP开关为 SOP_MODE2 (运行模式)**：
+
 ```
-S8 (SOP0): OFF
-S7 (SOP1): OFF
+SOP0: OFF  (断开)
+SOP1: ON   (闭合) ← 改变这个
 ```
+
+### 3.2 复位启动
+
+**方法1**：按下开发板的RESET按钮
+
+**方法2**：断电后重新上电
 
 ---
 
-### 3.2 执行App烧录
+### 3.3 打开串口终端
 
-```powershell
-# 确保在3-Tools目录
-.\arprog_cmdline_6844.exe -p COM3 -f "..\2-HelloWorld_App\hello_world_system.release.appimage" -o 0x42000
-```
+**串口配置**：
+- 端口: COM3 (或你识别的端口)
+- 波特率: 115200
+- 数据位: 8
+- 停止位: 1
+- 校验: 无
 
-**参数说明**：
-- `-p COM3`: 串口号
-- `-f hello_world_system.release.appimage`: 预编译的HelloWorld应用
-- `-o 0x42000`: Flash起始地址（与SDK宏`M_META_IMAGE_OFFSET`一致，SBL会从这里加载）
-
----
-
-### 3.3 烧录过程监控
-
-**预期输出**：
-```
-======================================
-TI Flash Programmer v3.5
-======================================
-Port: COM3
-Baudrate: 115200
-Target: AWRL6844
-
-Connecting...
-[OK] Device detected
-
-Erasing sectors...
-  Address: 0x00042000 - 0x001FFFFF
-  [████████████████████] 100%
-[OK] Erase complete
-
-Programming...
-  File: hello_world_system.release.appimage (~220KB)
-  Address: 0x00042000
-  [████████████████████] 100%
-[OK] Program complete
-
-Verifying...
-  [████████████████████] 100%
-[OK] Verify complete
-
-Time: 60 seconds
-Status: SUCCESS ✅
-======================================
-```
-
-**烧录时间**：约 60-75 秒
+**推荐工具**：TeraTerm, PuTTY, 串口助手
 
 ---
 
-### 3.4 验证App烧录（可选）
-
-```powershell
-# 读取Flash前1KB
-.\arprog_cmdline_6844.exe -p COM3 -r 0x42000 -s 1024 -o app_readback.bin
-
-# 对比
-fc /b "..\2-HelloWorld_App\hello_world_system.release.appimage" app_readback.bin
-```
-
----
-
-## Phase 4: 验证运行
-
-### 4.1 烧录HelloWorld
-
-**保持SOP_MODE1模式，执行烧录**：
-
-```bash
-cd 3-Tools
-
-.\arprog_cmdline_6844.exe -p COM3 -f ..\2-HelloWorld_App\hello_world_system.release.appimage -o 0x42000
-```
-
-**参数说明**：
-- `-o 0x42000`: 应用起始地址（M_META_IMAGE_OFFSET）
-
----
-
-### 4.2 烧录过程监控
-
-**预期输出**：
-```
-======================================
-TI Flash Programmer v3.5
-======================================
-Port: COM3
-Target: AWRL6844
-
-Erasing sectors...
-  Address: 0x00042000 - 0x001FFFFF (按SBL最大擦除范围)
-  [████████████████████] 100%
-[OK] Erase complete
-
-Programming...
-  File: hello_world_system.release.appimage (约200KB)
-  Address: 0x00042000
-  [████████████████████] 100%
-[OK] Program complete
-
-Verifying...
-  [████████████████████] 100%
-[OK] Verify complete
-
-Time: 50 seconds
-Status: SUCCESS ✅
-======================================
-```
-
-**烧录时间**：约 50-70 秒
-
----
-
-## Phase 5: 验证运行
-
-### 5.1 切换到运行模式
-
-**配置SOP_MODE2模式（应用启动）**：
-
-```
-SOP0: OFF (断开)
-SOP1: ON  (闭合)
-```
-
-### 5.2 打开串口终端
-
-**推荐工具**: TeraTerm
-
-**串口参数**：
-```
-Baudrate: 115200
-Data bits: 8
-Parity: None
-Stop bits: 1
-Flow control: None
-```
-
-**TeraTerm配置**：
-1. 文件 → 新建连接
-2. 选择Serial，端口选择COMx
-3. 设置 → 串口... → 115200 8N1
-4. 勾选"本地回显"（可选）
-
----
-
-### 5.3 复位开发板
-
-**按下复位按钮** 或 **重新上电**
-
----
-
-### 5.4 查看输出
+### 3.4 查看输出
 
 **预期串口输出**：
 
 ```
 **********************************************
 *        AWRL6844 Secondary Bootloader      *
-*             Version: 1.0.0                *
 **********************************************
 
-[SBL] Initializing...
-[SBL] SOC Init... OK
-[SBL] QSPI Init... OK
-[SBL] Loading Application from Flash...
-[SBL]   Address: 0x00040000
-[SBL]   Size: 218,624 bytes
-
-[SBL] Parsing Meta Image...
-[SBL]   Found 2 cores:
-[SBL]     [1] R5F @ 0x00000000
-[SBL]     [2] DSP @ 0x21000000
-
-[SBL] Loading R5F image...
-[SBL]   Load Address: 0x00000000
-[SBL]   Entry Point: 0x00000100
-[SBL]   Size: 102,400 bytes
-[SBL] Loading DSP image...
-[SBL]   Load Address: 0x21000000
-[SBL]   Size: 51,200 bytes
-
-[SBL] Starting Application...
-[SBL] Jump to R5F entry point: 0x00000100
+[BOOTLOADER_PROFILE] Boot Media       : FLASH
+[BOOTLOADER_PROFILE] Boot Image Size  : 204 KB
+[BOOTLOADER_PROFILE] Cores present    :
+r5fss0-0
+c66ss0
+[BOOTLOADER] Booting Cores ...
+[BOOTLOADER] Jumping to application
 
 **********************************************
 *         Hello World Application           *
 **********************************************
 
-[APP] R5F Core Running @ 200 MHz
-[APP] DSP Core Running @ 450 MHz
-[APP] System Ready!
+Hello World from r5fss0-0 !
+Hello World from c66ss0 !
 
-Hello World from AWRL6844! 🎉
+All tests have passed!!
+```
+
+### 3.5 成功标志
+
+如果看到以下内容，说明烧录成功：
+- ✅ "BOOTLOADER_PROFILE] Boot Media : FLASH" - SBL从Flash启动
+- ✅ "Hello World from r5fss0-0 !" - R5F核心运行正常
+- ✅ "Hello World from c66ss0 !" - DSP核心运行正常
+- ✅ "All tests have passed!!" - 测试通过
+
+---
+
+## 故障排查
+
+### 问题1: 找不到COM端口
+
+**现象**: 设备管理器中没有XDS110设备
+
+**解决方案**：
+1. 检查USB连接是否牢固
+2. 更换USB端口
+3. 安装XDS110驱动：
+   ```
+   C:\ti\ccs1280\ccs\install_scripts\install_drivers.bat
+   ```
+4. 重启电脑
+
+---
+
+### 问题2: 烧录失败 "connect to device failed"
+
+**现象**: arprog工具无法连接到设备
+
+**解决方案**：
+1. 确认SOP开关为SOP_MODE1 (SOP0=OFF, SOP1=OFF)
+2. 按下RESET按钮
+3. 关闭其他占用串口的程序（TeraTerm、PuTTY等）
+4. 重新上电后再试
+5. 尝试更换COM端口
+
+---
+
+### 问题3: 烧录成功但无输出
+
+**现象**: 切换到SOP_MODE2后串口无输出
+
+**解决方案**：
+1. 确认SOP开关改为SOP_MODE2 (SOP0=OFF, SOP1=ON)
+2. 确认串口终端配置：115200 8N1
+3. 确认COM端口正确（烧录用COM3，可能调试输出在COM4）
+4. 按RESET按钮重新启动
+5. 重新烧录固件
+
+---
+
+### 问题4: 输出乱码
+
+**现象**: 串口终端显示乱码
+
+**解决方案**：
+1. 检查波特率是否为115200
+2. 检查数据位是否为8
+3. 检查停止位是否为1
+4. 检查校验是否为"无"
+5. 尝试使用不同的串口工具
+
+---
+
+### 问题5: 烧录过程中断
+
+**现象**: 烧录进行到一半失败
+
+**解决方案**：
+1. 检查USB连接是否稳定
+2. 尝试使用更短、质量更好的USB线
+3. 不要在烧录过程中触碰开发板
+4. 确保供电稳定
+5. 重新执行完整烧录流程
+
+---
+
+## 📚 参考资料
+
+### 官方文档
+
+- **EVM_SETUP_AND_FLASHING.html** - 硬件设置和烧录指南
+- **BUILD_GUIDE.html** - 编译指南
+- **EXAMPLES_DRIVERS_SBL.html** - SBL原理和启动流程
+
+### Flash布局
+
+| 地址 | 大小 | 内容 |
+|------|------|------|
+| 0x0000 - 0x1FFF | 8KB | Reserved |
+| 0x2000 - 0x41FFF | 256KB | SBL (实际~130KB) |
+| 0x42000 - 0x1FFFFF | 1784KB max | Application |
+
+### 源码定义
+
+来自 `sbl.h`：
+```c
+#define M_META_SBL_OFFSET       (uint32_t)(0x02000U)
+#define M_META_IMAGE_OFFSET     ((uint32_t)M_META_SBL_OFFSET + (uint32_t)(0x40000U))
+#define SBL_MAX_METAIMAGE_SIZE  (1784U * 1024U)
+```
+
+---
+
+**文档版本**: V2.0 (基于官方SDK标准流程)  
+**更新日期**: 2025-12-15  
+**适用SDK**: MMWAVE_L_SDK_06_01_00_01
 
 Device Info:
   Chip ID: AWRL6844
@@ -518,8 +472,9 @@ Error: Programming failed at 0x00002000
 
 **解决方案**：
 1. 确认应用烧录地址正确（0x42000）
-2. 重新生成hello_world_meta.bin
+2. 检查.appimage文件完整性
 3. 重新烧录应用
+4. 检查arprog命令是否使用了`-c`参数（擦除后写入）
 
 ---
 
@@ -567,12 +522,11 @@ arprog_cmdline_6844.exe -p COM3 -f sbl.release.appimage -o 0x2000 -v
 
 | 操作 | 预计时间 | 说明 |
 |------|---------|------|
-| 生成SBL Meta | ~5秒 | 依赖PC性能 |
-| 生成App Meta | ~10秒 | 包含多核镜像 |
+| 检查固件文件 | ~5秒 | 验证文件存在 |
 | 擦除Flash | ~30秒 | 按Sector擦除 |
-| 烧录SBL | ~45秒 | 135KB @ 115200 |
-| 烧录App | ~60秒 | 218KB @ 115200 |
-| **总耗时** | **~2.5分钟** | 从生成到验证 |
+| 烧录SBL | ~45秒 | ~130KB @ 115200 |
+| 烧录App | ~60秒 | ~218KB @ 115200 |
+| **总耗时** | **~2-3分钟** | 完整烧录流程 |
 
 ---
 
