feat: 添加固件库标签页完整功能 - v1.2.6
- 新增项目目录树标签页（递归显示、智能注释）
- 标签页内容复用完整分析
- 修复variants对象访问错误
- 添加详细的项目分析文档
- 准备重构分析模块

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -90,3 +90,27 @@ v1.1.0
 * v1.0.7的答复："需要读取板载固件信息" →  **措辞不当** ，实际是"通过串口通信判断SBL是否存在"
 
 你的意思是通过串口通信可以判断SBL是否存在.   那就实现这个功能. 单独列出这个功能.
+
+
+V1.1.1
+
+1.再增加一个固件文件的标签: 展示C:\ti 中demo固件文件配对列举出来,并详细解释这个固件作用,.syscofig及对应的.cfg文件, 及对应的绝对路径,方便直接COPY到首页的固件路径中,及为下一步可视化测试做准备.
+
+2.代码质量可以进一步优化  3. 是否有SBL及应用固件匹配AWRL6844EVM的提示??  
+
+
+v1.1.2
+
+1. 为什么扫描C:\ti\MMWAVE_L_SDK_06_01_00_01 未找到demo固件???
+2. c:\ti目录中的固件库有没有在其他目录中?如果有 把这些大目录预置到APP中,例如 C:\ti\radar_toolbox_3_30_00_06,查询一下c:\ti所有目录再做决定.
+3. 必须提醒固件库必须是对应AWRL6844EVM可用的
+4. v1.1.1提到的配对配置文件有展示吗?
+
+v1.1.3  
+
+1. 为什么固件列表只有3个?
+2. 把固件库标签中搜索的文件分为4类配套: sbl, 应用固件, sysconfig文件,RTOS .cfg文件,
+
+v1.2.0
+
+按照下面文件重构:D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-15\2025-12-15_v1.2.0固件库重构设计.md
