chore: 更新.gitignore和项目文档图片资源
- 删除analysis目录忽略规则
- 添加文档相关图片文件
- 添加analysis分析模块（未使用，保留作参考）
- 删除过时的bat脚本文件

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -78,8 +78,6 @@ v1.0.9
 
 这里面有个很有意思的事情,之前不是说不可以读取板载固件信息吗. 为什么现在又答复我SBL版本信息：需要读取板载固件信息.
 
-
-
 v1.1.0
 
 你在v1.0.9中得出如下结论:
@@ -91,13 +89,11 @@ v1.1.0
 
 你的意思是通过串口通信可以判断SBL是否存在.   那就实现这个功能. 单独列出这个功能.
 
-
 V1.1.1
 
 1.再增加一个固件文件的标签: 展示C:\ti 中demo固件文件配对列举出来,并详细解释这个固件作用,.syscofig及对应的.cfg文件, 及对应的绝对路径,方便直接COPY到首页的固件路径中,及为下一步可视化测试做准备.
 
-2.代码质量可以进一步优化  3. 是否有SBL及应用固件匹配AWRL6844EVM的提示??  
-
+2.代码质量可以进一步优化  3. 是否有SBL及应用固件匹配AWRL6844EVM的提示??
 
 v1.1.2
 
@@ -106,7 +102,7 @@ v1.1.2
 3. 必须提醒固件库必须是对应AWRL6844EVM可用的
 4. v1.1.1提到的配对配置文件有展示吗?
 
-v1.1.3  
+v1.1.3
 
 1. 为什么固件列表只有3个?
 2. 把固件库标签中搜索的文件分为4类配套: sbl, 应用固件, sysconfig文件,RTOS .cfg文件,
@@ -114,3 +110,34 @@ v1.1.3
 v1.2.0
 
 按照下面文件重构:D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-15\2025-12-15_v1.2.0固件库重构设计.md
+
+v1.2.0
+
+1. **左侧列表宽度没感觉又增加,设置成50/50, 并可以使用鼠标点左右中间线可自由调整比例.**
+2. **默认扫描路径 不要直接设置在app的脚本中, 可以默认这些官方目录没有问题,但也要可以随时删除,添加.**
+3. **HelloWorld**固件本来就是c:\ti 目录下的官方资料,D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录这个目录不需要默认添加进去,因为它不是官方默认目录.为了强制搜索到**HelloWorld**固件而把自定义的固件目录添加进去是懒惰行为. 应该找一下为什么没有在c:\ti 没有搜索到**HelloWorld**固件具体原因.
+4. 没有看到管理扫描路径, 与原来的界面一样,没变化.
+
+v1.2.2
+
+1. 我是两个显示器, 我点开管理扫描路径弹出的窗口与我的主窗口不在一个显示器内,并且窗口也不可移动.修复BUG.
+2. 搜索到一堆hello world ,但又不知道区别.该如何选择区分??
+3. 在应用固件中只看到名字,具体路径也看不到.建议所有文件都要显示详细的绝对路径.
+
+v1.2.3
+
+重启的APP为什么没有在所有界面的最前端, 必须再点一次任务栏的图片,才会再最前面. fix it.
+
+v1.2.4 
+
+SysConfig配置
+x 未找到
+RTOS配置X 未找到    ,我点了所有固件,这是为什么?
+
+v1.2.5
+
+1.为什么停止了版本更新
+
+2. 那hello world固件为例, 显示兼容性未知, 如果是为止,为什么会显示在固件库中呢. 况且均在C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\hello_world\xwrL684x-evm 目录下, 是兼容的.所以兼容性下方提供判定兼容原因. 文件名判断或项目目录判断,这个逻辑没错吧.
+3. 如果SysConfig配置,RTOS配置, 未找到 -仅源代码项目包含，预编译固件无此文件, 那么它的源代码目录在哪里?不能自动关联吗? 如果能关联, 请提供并显示文件名及对应目录.
+4. 固件库中的hello world 有四个固件文件, 但我觉得逻辑是他们属于同一个固件项目, 所以在固件项目列表中只能显示为一个固件项目, 有4个固件文件的话, 需要在右框中显示此固件项目中所有的固件文件,并在最右面再加一个列框, 比较四个固件的区别.以便知道选择哪一个?
