refactor: v1.2.7 - 大幅精简tab_firmware_lib.py
✨ 精简成果：
- 代码行数：2738行  1544行（减少43.6%）
- 方法数：61个  约16个

🗑️ 删除内容：
- 删除目录树标签页（_create_directory_tree_tab + _generate_directory_tree）
- 删除4个分析标签页（SBL/固件变体/雷达配置/完整分析）
- 删除所有硬编码分析方法（约900行）
- 删除未使用的analysis/目录（7个文件，1418行代码）
- 删除损坏的备份文件

✅ 保留内容：
- 文件信息标签页（_create_files_tab）
- 核心辅助方法（_add_detail_path_row等）
- 所有业务逻辑和数据处理功能

📋 测试状态：
- 程序启动正常
- 文件信息标签页显示正常
- 所有核心功能完整

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -128,7 +128,7 @@ v1.2.3
 
 重启的APP为什么没有在所有界面的最前端, 必须再点一次任务栏的图片,才会再最前面. fix it.
 
-v1.2.4 
+v1.2.4
 
 SysConfig配置
 x 未找到
@@ -141,3 +141,9 @@ v1.2.5
 2. 那hello world固件为例, 显示兼容性未知, 如果是为止,为什么会显示在固件库中呢. 况且均在C:\ti\MMWAVE_L_SDK_06_01_00_01\examples\hello_world\xwrL684x-evm 目录下, 是兼容的.所以兼容性下方提供判定兼容原因. 文件名判断或项目目录判断,这个逻辑没错吧.
 3. 如果SysConfig配置,RTOS配置, 未找到 -仅源代码项目包含，预编译固件无此文件, 那么它的源代码目录在哪里?不能自动关联吗? 如果能关联, 请提供并显示文件名及对应目录.
 4. 固件库中的hello world 有四个固件文件, 但我觉得逻辑是他们属于同一个固件项目, 所以在固件项目列表中只能显示为一个固件项目, 有4个固件文件的话, 需要在右框中显示此固件项目中所有的固件文件,并在最右面再加一个列框, 比较四个固件的区别.以便知道选择哪一个?
+
+SBL、固件变体、雷达配置、完整分析
+
+v.1.2.6
+
+删除目录树标签页
