fix: 删除标签页版本号和多余的版本同步脚本
- 标签页模块不需要独立版本号
- 只有主APP (flash_tool.py) 需要版本管理
- 删除 check_version.py 版本同步脚本
- tab_firmware_lib.py 移除版本号标记

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -147,3 +147,22 @@ SBL、固件变体、雷达配置、完整分析
 v.1.2.6
 
 删除目录树标签页
+
+** v1.2.7！**
+
+📝  **更新日志** ：
+
+* 删除了目录树标签页
+* 删除了4个分析标签页（SBL、固件变体、雷达配置、完整分析）
+* 删除了约900行硬编码的分析方法
+* 代码从2738行精简到1544行（减少43.6%）
+* 只保留文件信息标签页
+
+v1.2.8
+
+继续精简,删除项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts\tabs\tab_firmware_lib.py 中无关的代码
+
+
+V1.2.9
+
+项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts\tabs\tab_firmware_lib.py 标签脚本中,只以固件.appimage为核心来收集固件项目, 去掉.bin
