feat: 添加AWRL6844固件管理系统 - 智能匹配模块新增固件搜索功能
- 新增awrl6844_gui_app.py: PyQt6图形界面，包含5个功能标签页
- 新增awrl6844_firmware_matcher.py: 核心匹配引擎，支持智能评分推荐
- 智能匹配模块新增固件快速搜索功能，支持多字段实时筛选
- 新增test_matcher.py: 功能验证脚本
- 新增启动脚本和完整文档
- 更新相关项目文档

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -162,7 +162,37 @@ v1.2.8
 
 继续精简,删除项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts\tabs\tab_firmware_lib.py 中无关的代码
 
-
 V1.2.9
 
 项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts\tabs\tab_firmware_lib.py 标签脚本中,只以固件.appimage为核心来收集固件项目, 去掉.bin
+
+v1.3.0
+
+把以下功能全部删除
+
+1. **🔧 SBL引导固件**
+   * 推荐的SBL列表（最多3个）
+   * 优先级图标（⭐⭐⭐）
+   * 推荐原因和来源
+   * "选择其他SBL"按钮
+2. **📡 雷达参数配置**
+   * 推荐的配置文件列表（最多3个）
+   * 优先级图标
+   * 推荐原因和来源
+   * 无配置文件时显示友好解释（[_get_no_radar_cfg_reason](vscode-file://vscode-app/c:/Users/Administrator/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-browser/workbench/workbench.html)方法）
+
+
+v1.3.1
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
+
+1. 在固件库-文件路径标签页中: 列出所有应用.appimage固件, 每个固件都包含:文件名,大小,完整路径
+2. 在固件库标签页,增加一个导出所有固件项目列表功能, 导出格式为.md
+
+
+v1.3.2
+
+0.更新完脚本后,更新主程序的版本号. 然后打开主APP,检查更行界面及功能.
+
+
+1. 我要的是点击对应固件项目列出对应项目.appimage固件,我要的不是在**固件库标签页**一次性展示所有项目的固件列表
