docs: 补充项目文档和截图
- 添加2025-12-17技术分析文档（6篇）
- 添加寻找项目规律相关截图（4张PNG）
- 添加目录说明截图
- 更新需求设计文档
- 更新固件列表和配置关系文档

--- a/项目文档/1-需求与设计/寻找项目规律.md
+++ b/项目文档/1-需求与设计/寻找项目规律.md
@@ -38,10 +38,35 @@ SBL:
 * 形成一个md文件,按照规则建立文件名,放到开发记录的今日日期的目录中.
 
 
+在D:\7.项目资料\Ti雷达项目\project-code\code_search 重新新建代码
 
-* 我的板子是awrl6844evm,  结合项目文档\2-开发记录\2025-12-17目录中文件,使用python给我做一个GUI APP
+* 我的板子是awrl6844evm,  结合项目文档\2-开发记录\2025-12-17目录中文件,使用python给我做一个GUI APP, 仅适用与awrl6844evm
 * 先深度学习2025-12-17目录,根据目录及文件规律整理出应用固件,SBL,雷达参数配置文件之间的关联
-* 根据目录及文件命名规律做一个可以分层筛选出应用固件,也可以通过文件名直接搜索筛选出应用固件
-* 选择筛选出的应用固件, 推荐SBL及雷达参数配置文件,  及推荐配对率, 以便正确的使用这些资料烧录及后续的可视化.
-* 找出这些固件,可以很清晰的看到这些文件的绝对路径,可以一键copy, 可以了解文件的详细介绍,应用范围,及同项目中文件的区别介绍等等.
-*
+* 应用固件内容: 深度学习D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI毫米波雷达芯片命名规则详解.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI_SDK固件列表.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_固件目录与文件命名规律分析.md
+* SBL内容: 深度学习D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI毫米波雷达芯片命名规则详解.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_SBL固件规律分析.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI_SDK固件列表.md
+* 雷达参数配置文件内容:深度学习D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI毫米波雷达芯片命名规则详解.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI雷达固件配置文件关系详解.md,D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_TI雷达固件配置文件关系详解.md
+* 智能匹配模块:选中筛选出的应用固件, 推荐SBL及雷达参数配置文件,  及推荐配对率, 以便正确的使用这些资料烧录及后续的可视化.找出这些固件,可以很清晰的看到这些文件的绝对路径,可以一键copy, 可以了解文件的详细介绍,应用范围,及同项目中文件的区别介绍等等.  为智能匹配模块添加搜索应用固件功能，方便在众多固件中快速定位：
+* 
+* 扫描模块: 设置C:\ti\MMWAVE_L_SDK_06_01_00_01, C:\ti\radar_toolbox_3_30_00_06为默认文件夹, 可以随时增加删除文件夹,可以重新扫描重新扫描应用固件,SBL固件,雷达参数配置文件. 扫描出的文件根据应用固件,SBL固件,雷达参数配置文件分类汇总. 扫描的文件覆盖原来的文件.以免文件重复.
+* 
+* 搜索模块:可以通过文件名直接搜索筛选出应用固件,SBL,雷达参数配置文件,也可以通过目录搜索到应用固件,SBL,雷达参数配置文件. 搜索出的文件根据应用固件,SBL固件,雷达参数配置文件分类汇总
+* 
+* 筛选模块: 应用固件筛选, SBL固件 筛选, 筛选出的文件根据应用固件,SBL固件,雷达参数配置文件分类汇总
+* 筛选要求如下:
+* 应用固件原则:目标目录中含有xwrL684x,或文件名含有6844, 均为awrl6844evm匹配的固件
+* SBL固件原则: 根据D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_SBL固件规律分析.md 规律 开发筛选功能
+* 雷达参数配置文件原则:根据项目文档\2-开发记录\2025-12-17\2025-12-17_AWRL6844EVM雷达参数配置文件清单.md 开发筛选功能
+
+细分筛选原则如下:
+
+根据每个目录或文件规律不同, 调出的层级筛选也不同.,深度学习D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_固件目录与文件命名规律分析.md
+
+根据目录筛选部分:
+
+C:\ti\MMWAVE_L_SDK_06_01_00_01有7层, 筛选就根据7层筛选,并且每个层级的筛选内容联动变化,筛选项目及内容全部使用中文.
+
+C:\ti\radar_toolbox_3_30_00_06有5-6层,筛选就根据5-6层筛选,并且每个层级的筛选内容联动变化,筛选项目及内容全部使用中文
+
+根据文件名的筛选部分:
+
+根据D:\7.项目资料\Ti雷达项目\项目文档\2-开发记录\2025-12-17\2025-12-17_固件目录与文件命名规律分析.md 整理层级,并且每个层级的筛选内容联动变化,筛选项目及内容全部使用中文
