refactor: 重命名固件烧录目录为更简洁的名称
- 目录重命名: 01-AWRL6844_HelloWorld_完整烧录  01-AWRL6844固件系统工具
- 更新所有相关文档中的路径引用
- 删除固件库标签页文件 (tab_firmware_lib.py)
- 同步更新：需求文档、操作指南、README等
- 版本更新至 v1.3.3

--- a/项目文档/2-开发记录/2025-12-15/错误对比分析-2025-12-15.md
+++ b/项目文档/2-开发记录/2025-12-15/错误对比分析-2025-12-15.md
@@ -2,7 +2,7 @@
 
 **分析日期**: 2025-12-15  
 **对比基准**: 官方SDK文档 + sbl.h源码  
-**错误目录**: `项目文档/3-固件烧录/01-AWRL6844_HelloWorld_完整烧录/`
+**错误目录**: `项目文档/3-固件烧录/01-AWRL6844固件系统工具/`
 
 ---
 
