--- a/项目文档/3-固件烧录/01-AWRL6844固件系统工具/操作指南.md
+++ b/项目文档/3-固件烧录/01-AWRL6844固件系统工具/操作指南.md
@@ -1,4 +1,4 @@
-# 📖 AWRL6844 HelloWorld 完整烧录操作指南
+# 📖 AWRL6844 固件系统工具操作指南
 
 > **基于TI官方SDK标准流程 - 简化版**
 
@@ -44,7 +44,7 @@
 确认以下**预编译固件**存在：
 
 ```
-01-AWRL6844_HelloWorld_完整烧录/
+01-AWRL6844固件系统工具/
 ├── 1-SBL_Bootloader/
 │   └── sbl.release.appimage               ✅ SBL固件 (~130KB)
 │
@@ -150,7 +150,7 @@ python flash_tool.py
 **手动使用arprog命令**
 
 ```powershell
-cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\5-Scripts"
+cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844固件系统工具\5-Scripts"
 
 # 步骤1: 烧录SBL
 .\3_flash_sbl.bat COM3
@@ -164,7 +164,7 @@ cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_Hel
 **方法3：直接使用arprog工具（高级）**
 
 ```powershell
-cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844_HelloWorld_完整烧录\3-Tools"
+cd "D:\7.项目资料\Ti雷达项目\项目文档\3-固件烧录\01-AWRL6844固件系统工具\3-Tools"
 
 # 一次性烧录SBL和App（推荐）
 .\arprog_cmdline_6844.exe -p COM3 ^
